[Mooc-Header] Fix min-height for small logos on tablet - mobile view

--- a/packages/@coorpacademy-components/src/organism/mooc-header/style.css
+++ b/packages/@coorpacademy-components/src/organism/mooc-header/style.css
@@ -516,11 +516,13 @@
     justify-content: flex-start;
     height: auto;
     align-items: center;
+    min-height: 60px;
   }
 
   .open {
     height: auto;
     display: flex;
+    min-height: 60px;
   }
 
   .logoWrapper {
